--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> PROYECTO FINAL
+    <title> Nikisita
     </title>
     <style>
         body{
@@ -56,17 +56,17 @@
             <div class="about-grid">
                 <div>
                     <h3>Todo empieza con un sueño</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <p>El arte digital empiza desde la inspiración del artista.</p>
                     
                     <ul class="info">
-                        <li><strong>Nombre:</strong> Mayra Lizeth Carrasco Pardo</li>
-                        <li><strong>Email:</strong> mayralizethcarrascopardo@gmail.com</li>
-                        <li><strong>Cumpleaños:</strong> 1 de Noviembre 1995</li>
-                        <li><strong>Edad:</strong> 30 años</li>
+                        <li><strong>Nombre:</strong> Ann Sophie Nicole Guevara Tavara</li>
+                        <li><strong>Email:</strong> nikoru12bts@gmail.com</li>
+                        <li><strong>Cumpleaños:</strong> 17 de Diciembre</li>
+                        <li><strong>Edad:</strong> 18 años</li>
                     </ul>
                 </div>
                 <div class="about-image">
-                    <img src="img/jpg.jpg" alt="Mayra">
+                    <img src="img/jpg.jpg" alt="Niki">
                 </div>
             </div>
         </div>
@@ -112,4 +112,5 @@
     <!--JavaScript-->
     <script src="scripts.js"></script>
 </body>
+
 </html>
