--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </ul>
                 </div>
                 <div class="about-image">
-                    <img src="img/jpg.jpg" alt="Niki">
+                    <img src="img/JPEG.jpeg" alt="Niki">
                 </div>
             </div>
         </div>
@@ -114,3 +114,4 @@
 </body>
 
 </html>
+
